text-align right fix

--- a/styles/text.css
+++ b/styles/text.css
@@ -51,7 +51,7 @@
 }
 
 .text-right {
-    float: right;
+    text-align: right;
 }
 
 .text-left {
